--- a/src/index.scss
+++ b/src/index.scss
@@ -45,6 +45,10 @@ body {
             flex-grow: 1;
             padding-bottom: 1rem;
 
+            .form-item:nth-child(4) {
+                border: 1px solid red;
+            }
+
             input[type='text'],
             input[type='password'],
             button,
@@ -58,6 +62,7 @@ body {
 
             label {
                 margin-top: 1rem;
+                width: 80px;
                 margin-right: 20px;
                 .hide {
                     display: none;
@@ -68,7 +73,6 @@ body {
                     margin-left: 0.25rem;
                 }
                 input {
-                                        
                 }
             }
             input[type='text'],
